--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild:dev": "rimraf dist",
     "build:dev": "webpack --env.dev",
     "c9": "webpack-dev-server --host $IP --port $PORT --env.dev --history-api-fallback --hot",
+    "lint": "eslint src --ignore-pattern *.test.js",
     "start": "webpack-dev-server --env.dev --history-api-fallback --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +22,11 @@
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.26.0",
